# RAG-Agent-Chat

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  学习.md
app/: __init__.py  main.py
data/: finance_cn_aml_kyc_policy.md  finance_cn_research_faq.csv  finance_cn_trade_surveillance_sop.md  finance_cn_wealth_suitability_policy.md  finance_en_research_disclosure_policy.md  procurement_cn_faq.csv  procurement_cn_standard_msa_template.md  procurement_cn_vendor_onboarding_policy.md  sample_faq.csv  sample_handbook.md  sample_policy.md  法务核心-供应商回传红线协议.md  法务核心-合同审查红线指引.md  法务核心-数据处理供应商检查清单.md  法务核心-标准主服务协议模板.md  采购核心-供应商准入办法.md  采购核心-供应商背景核验清单.md  采购核心-外包与服务类供应商筛选要点.md  采购核心-安全评审操作流程.md  采购核心-小额SaaS快速引入指引.md  采购核心-常见问答.csv  采购核心-第三方数据处理补充说明.md  采购核心-系统接入类采购补充要求.md  采购核心-试用转正式采购规则.md  采购核心-采购升级判断案例集.md  采购核心-采购审批矩阵.md  采购核心-预算例外处理说明.md
docs/: architecture.md  finance-positioning.md  learning-path.md  procurement-positioning.md
frontend/: app.py  index.html  styles.css  test_js_app.html  test_js_components.html  test_js_config.html  test_js_pages-assistant-audit.html  test_js_pages-overview-knowledge.html  test_js_pages-projects.html  test_projects_error.html
knowledgeops_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: benchmark_retrieval_cache.py  debug_legal_review_step.py  eval_legal_ablation.py  eval_legal_smoke.py  eval_procurement_ablation.py  eval_procurement_retrieval_hard.py
tests/: conftest.py  test_chat_flow.py  test_chunking.py  test_evaluation.py  test_legal_clause_rules.py  test_legal_contract_compare.py  (+6 more)
(+477 files in other folders)
