[project]
name = "knowledgeops-copilot"
version = "0.1.0"
description = "KnowledgeOps Copilot: an auditable RAG + Agent platform for enterprise knowledge operations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.0",
  "streamlit>=1.42.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "frontend*", "docs*", "tests*"]
